<resources>
    <string name="app_name">AIO MODS MASTER</string>
    <string name="second_title">EXPLORE</string>

    <string name="tab_mods">Mods</string>
    <string name="tab_textures">Textures</string>
    <string name="tab_maps">Maps</string>
    <string name="tab_seeds">Seeds</string>
    <string name="tab_skins">Skins</string>
    <string name="search_text">Type to search...</string>
    <string name="latest">Latest</string>
    <string name="popular_mods">Popular Mods / Addons</string>
    <string name="popular_maps">Popular Maps</string>
    <string name="mods_title">Mods / Addons</string>
    <string name="details">DETAILS</string>
    <string name="downloading">DOWNLOADING</string>
    <string name="premium">VIP PREMIUM</string>
    <string name="remove_ads">REMOVE\nADS</string>
    <string name="fast_update">FAST\nUPDATE</string>

    <string name="dialog_title_completed">Download Completed!</string>
    <string name="dialog_text_completed">Are you happy when using our app? Can you spare time a few seconds to rate it?</string>
    <string name="dialog_later">LATER</string>
    <string name="dialog_nope">NOPE</string>
    <string name="dialog_not_found_title">Minecraft not found!</string>
    <string name="dialog_not_found_text">You need minecraft to install files. Please install and download from Google Play Store.</string>
    <string name="dialog_cancel">CANCEL</string>

    <string name="aio_title">Lorem ipsum dolor sit amet</string>
    <string name="download_count">100K</string>
    <string name="views_count">140K</string>
    <string name="read_more">READ MORE</string>
    <string name="aio_description">The latest issue no. 293 released on 15 September 2020 is available here. For a specific research, insert the keywords (e.g. International Criminal Court; landmines treaty; school competitions) in the search box here below.</string>
    <string name="get_premium">GET PREMIUM</string>

    <string name="pay_info_box_title">INFORMATION</string>
    <string name="pay_info_box_text">- You might find a payment authorization on your payment method up to 24 hours before the renewal date but you\'ll only be charged on the renewal date.\n- You\'ll automatically be charged each renewal period depending on your subscription terms.\n- You can cancel your subscription at any time in the subscription selection on Google Pay. When you cancel your subscription, you\'ll lose access to the subscription at the end of the current billing period.</string>
    <string name="download">DOWNLOAD</string>
    <string name="install">INSTALL</string>

    <string name="rationale_write_permission">We need this permission for download file</string>
    <string name="copy_seed">COPY SEED</string>
    <string name="sure">SURE</string>
    <string name="sort_by">Sort By</string>
    <string name="newest">Newest</string>
    <string name="downloads">Downloads</string>
    <string name="views">Views</string>
    <string name="search_hint">Type to search...</string>
    <string name="items_not_found">Items not found</string>
    <string name="ad">AD</string>

</resources>