<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/complete_dialog_margin_start_end"
        android:layout_marginEnd="@dimen/complete_dialog_margin_start_end"
        android:layout_marginTop="@dimen/complete_dialog_margin_top_bottom"
        android:textSize="26sp"
        fontPath="fonts/Roboto-Black.ttf"
        tools:ignore="MissingPrefix"
        android:text="@string/dialog_title_completed"
        android:textColor="@color/dialog_title_color"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="@dimen/complete_dialog_margin_start_end"
        android:layout_marginEnd="@dimen/complete_dialog_margin_start_end"
        fontPath="fonts/Roboto-Medium.ttf"
        tools:ignore="MissingPrefix"
        android:textColor="@color/dialog_text"
        android:textSize="14sp"
        android:text="@string/dialog_text_completed"
        android:layout_below="@id/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/dialog_button_background"
        android:layout_below="@id/description"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_later"
            android:layout_marginStart="@dimen/complete_dialog_margin_start_end"
            android:layout_centerVertical="true"
            android:textSize="19sp"
            fontPath="fonts/Roboto-Black.ttf"
            tools:ignore="MissingPrefix"
            android:textColor="@color/dialog_button_text"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_nope"
            android:layout_toStartOf="@+id/button_Ok"
            android:layout_marginEnd="22dp"
            fontPath="fonts/Roboto-Black.ttf"
            tools:ignore="MissingPrefix"
            android:textSize="19sp"
            android:textColor="@color/dialog_button_text"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/button_Ok"
            android:layout_width="85dp"
            android:layout_height="36dp"
            android:text="@string/sure"
            android:gravity="center"
            android:layout_marginEnd="@dimen/complete_dialog_margin_start_end"
            fontPath="fonts/Roboto-Black.ttf"
            tools:ignore="MissingPrefix"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:background="@drawable/background_dialog_sure"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</RelativeLayout>