<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_sort_button"
    android:orientation="vertical">

    <TextView
        android:id="@+id/selection_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/popup_sort_margin"
        android:layout_marginEnd="@dimen/popup_sort_margin"
        android:layout_marginTop="@dimen/popup_sort_margin_top"
        android:layout_marginBottom="@dimen/popup_sort_margin_top"
        fontPath="fonts/Roboto-Regular.ttf"
        android:textSize="14sp"
        tools:ignore="MissingPrefix"
        android:text="@string/newest"/>

    <TextView
        android:id="@+id/selection_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/popup_sort_margin"
        android:layout_marginEnd="@dimen/popup_sort_margin"
        android:layout_marginTop="@dimen/popup_sort_margin_top"
        android:layout_marginBottom="@dimen/popup_sort_margin_top"
        fontPath="fonts/Roboto-Regular.ttf"
        android:textSize="14sp"
        tools:ignore="MissingPrefix"
        android:text="@string/downloads"/>

    <TextView
        android:id="@+id/selection_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/popup_sort_margin"
        android:layout_marginEnd="@dimen/popup_sort_margin"
        android:layout_marginTop="@dimen/popup_sort_margin_top"
        android:layout_marginBottom="@dimen/popup_sort_margin_top"
        fontPath="fonts/Roboto-Regular.ttf"
        android:textSize="14sp"
        tools:ignore="MissingPrefix"
        android:text="@string/views"/>

</LinearLayout>