<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_image">

    <TextView
        android:id="@+id/premium_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/premium"
        android:textColor="@color/premium_text"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="58dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/premium_text"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/remove_ads"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/remove_ads_img"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/stop_ads"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/remove_ads_img"
                android:text="@string/remove_ads"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_centerInParent="true"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fast_update"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/fast_update_img"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/update"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/fast_update_img"
                android:text="@string/fast_update"
                android:layout_centerInParent="true"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>