<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_image">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/premiumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/premium"
            android:textColor="@color/premium_text"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:layout_marginTop="@dimen/vip_premium_title_margin"
            android:layout_marginBottom="@dimen/vip_premium_title_margin"
            fontPath="fonts/Minecrafter.Reg.ttf"
            tools:ignore="MissingPrefix"/>

        <LinearLayout
            android:id="@+id/actionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/premiumText"
            android:layout_marginStart="@dimen/remove_update_block_margin"
            android:layout_marginEnd="@dimen/remove_update_block_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/removeAdImage"
                    android:layout_width="@dimen/vip_actions_size"
                    android:layout_height="@dimen/vip_actions_size"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/stop_ads"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/removeAdImage"
                    android:text="@string/remove_ads"
                    android:textSize="@dimen/vip_action_text_size"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/vip_action_text_margin_top"
                    android:textColor="@color/white"
                    fontPath="fonts/Roboto-Medium.ttf"
                    tools:ignore="MissingPrefix"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/fastUpdateImage"
                    android:layout_width="@dimen/vip_actions_size"
                    android:layout_height="@dimen/vip_actions_size"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/update"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fastUpdateImage"
                    android:text="@string/fast_update"
                    android:textSize="@dimen/vip_action_text_size"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/vip_action_text_margin_top"
                    android:textColor="@color/white"
                    fontPath="fonts/Roboto-Medium.ttf"
                    tools:ignore="MissingPrefix"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/vipButtonGet"
            android:layout_width="@dimen/get_premium_button_width"
            android:layout_height="@dimen/get_premium_button_height"
            android:layout_marginTop="64dp"
            android:layout_below="@id/actionsContainer"
            android:layout_centerHorizontal="true"
            android:text="@string/get_premium"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/background_vip_button_get"
            android:gravity="center"
            fontPath="fonts/Roboto-Medium.ttf"
            tools:ignore="MissingPrefix"/>

        <TextView
            android:id="@+id/priceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vipButtonGet"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:text="USD 000.00/Week"
            fontPath="fonts/Roboto-Medium.ttf"
            tools:ignore="MissingPrefix"/>

        <RelativeLayout
            android:id="@+id/detailsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/priceInfo"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:layout_marginTop="58dp"
            android:layout_marginBottom="58dp"
            android:background="@drawable/background_vip_price_info">

            <TextView
                android:id="@+id/detailsInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:text="@string/pay_info_box_title"
                android:layout_centerHorizontal="true"
                fontPath="fonts/Roboto-Medium.ttf"
                tools:ignore="MissingPrefix"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailsInfoTitle"
                android:textColor="@color/vip_details_text_color"
                android:text="@string/pay_info_box_text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="16dp"
                android:layout_marginTop="24dp"
                fontPath="fonts/Roboto-Regular.ttf"
                tools:ignore="MissingPrefix"/>

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>