<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background">
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="@dimen/logo_icon"
            android:layout_height="@dimen/logo_icon"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_toolbar"
            android:layout_marginEnd="@dimen/margin_toolbar"
            android:src="@drawable/icon_logo"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/app_icon"
            android:padding="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/title_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_title"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/vip"
            android:layout_width="@dimen/logo_icon"
            android:layout_height="@dimen/logo_icon"
            android:layout_alignParentEnd="true"
            android:src="@drawable/iap_subscribe"
            android:layout_marginEnd="@dimen/margin_toolbar"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_layout_height"
        android:background="@color/black"
        android:layout_below="@id/toolbar_layout"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/mods"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/tab_padding"
            android:layout_marginStart="@dimen/margin_toolbar"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/tab_icon"
                android:layout_height="@dimen/tab_icon"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_mods"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:text="@string/tab_mods"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/textures"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/tab_padding"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/tab_icon"
                android:layout_height="@dimen/tab_icon"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_textures"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/tab_textures"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/maps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/tab_padding"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/tab_icon"
                android:layout_height="@dimen/tab_icon"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_maps"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/tab_maps"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/seeds"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/tab_padding"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/tab_icon"
                android:layout_height="@dimen/tab_icon"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_seeds" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/tab_seeds"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/skins"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/tab_padding"
            android:layout_marginEnd="@dimen/margin_toolbar"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/tab_icon"
                android:layout_height="@dimen/tab_icon"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_skins"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/tab_skins"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_color"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tab_layout"
        android:background="@color/title_color"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/latest_block"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/main_margin">
                <RelativeLayout
                    android:id="@+id/title_latest"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_space">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/latest"/>
                    <ImageView
                        android:id="@+id/latest_more_button"
                        android:layout_width="@dimen/tab_icon_width"
                        android:layout_height="@dimen/tab_icon_height"
                        android:layout_marginRight="@dimen/margin_for_more_button"
                        android:layout_marginBottom="8dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/more_bt"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/latest_list"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:layout_below="@id/title_latest"
                    tools:listitem="@layout/item_list_latest" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/popular_block"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/main_margin">
            <RelativeLayout
                android:id="@+id/title_popular_mods"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_space">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:text="@string/popular_mods"/>
                    <ImageView
                        android:id="@+id/popular_more_button"
                        android:layout_width="@dimen/tab_icon_width"
                        android:layout_height="@dimen/tab_icon_height"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/margin_for_more_button"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/more_bt"/>
            </RelativeLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/popular_mods_list"
                        android:layout_width="match_parent"
                        android:layout_below="@id/title_popular_mods"
                        android:layout_height="@dimen/item_height"
                        tools:listitem="@layout/item_list_latest" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/popular_maps_block"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/main_margin">
            <RelativeLayout
                android:id="@+id/title_popular_maps"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_space">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:text="@string/popular_maps"/>
                    <ImageView
                        android:id="@+id/more_button"
                        android:layout_width="@dimen/tab_icon_width"
                        android:layout_height="@dimen/tab_icon_height"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_for_more_button"
                        android:src="@drawable/more_bt"/>
            </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_maps_list"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:layout_below="@id/title_popular_maps"
                    tools:listitem="@layout/item_list_latest" />
            </RelativeLayout>
        </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>